updated featured card

--- a/fronted/src/app/home/category-row/category-row.component.html
+++ b/fronted/src/app/home/category-row/category-row.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex justify-center gap-4 overflow-x-auto px-4 py-3 bg-black/30 backdrop-blur-sm border border-white/20 rounded-lg m-4"
+  class="flex justify-center gap-4 overflow-x-auto px-4 py-3 bg-black/30 backdrop-blur-sm border border-white/20  my-6"
 >
   <button
     *ngFor="let category of categories"
