--- a/fronted/src/app/app.component.html
+++ b/fronted/src/app/app.component.html
@@ -7,7 +7,7 @@
 <app-footer></app-footer> -->
 
 
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen bg-gray-100">
   <app-header></app-header>
 
   <!-- Page Content -->
