--- a/fronted/src/app/shared/footer/footer.component.html
+++ b/fronted/src/app/shared/footer/footer.component.html
@@ -11,10 +11,10 @@
             class="h-10"
             alt="Logo"
           />
-          <span class="text-xl font-semibold text-white">Ticket Booking</span>
+          <span class="text-xl font-semibold text-white">E-Commerce</span>
         </div>
         <p class="text-sm text-gray-400">
-          Seamless ticket booking experience, built with Angular + Tailwind.
+          Seamless Shopping experience, built with Angular + Tailwind.
         </p>
       </div>
 
@@ -89,7 +89,7 @@
 
       <!-- Copyright -->
       <div class="text-sm text-gray-500 text-center md:text-right">
-        © 2025 Ticket Booking. All rights reserved.
+        © 2025 Somnath Prajapati. All rights reserved.
       </div>
     </div>
   </div>
