--- a/fronted/src/app/pages/home-page/home-page.component.html
+++ b/fronted/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,3 @@
-<app-featured-events></app-featured-events>
+<!-- <app-featured-events></app-featured-events> -->
 <app-event-list></app-event-list>
 <br>
