--- a/fronted/src/app/shared/header/header.component.html
+++ b/fronted/src/app/shared/header/header.component.html
@@ -42,9 +42,7 @@
       </div>
 
       <!-- Logo and Nav -->
-      <div
-        class="flex flex-1 items-center  sm:items-stretch sm:justify-start"
-      >
+      <div class="flex flex-1 items-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
           <img
             class="h-8 w-auto"
@@ -61,11 +59,22 @@
               >Home</a
             >
             <a
-              href="#"
+              *ngIf="authService.isLoggedIn()"
+              [routerLink]="'/cart'"
               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Events</a
             >
+              My Carts
+            </a>
+
             <a
+              *ngIf="!authService.isLoggedIn()"
+              [routerLink]="'/login'"
+              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+            >
+              Login
+            </a>
+
+            <!-- <a
               href="#"
               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
               >Watchlist</a
@@ -74,7 +83,7 @@
               href="#"
               class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
               >Featured</a
-            >
+            > -->
           </div>
         </div>
       </div>
@@ -87,6 +96,7 @@
         <div class="hidden md:block">
           <input
             type="text"
+            (input)="onSearchInput($event)"
             placeholder="Search..."
             class="rounded-lg w-xs bg-gray-700 px-3 py-2 text-sm text-white placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
           />
@@ -114,7 +124,7 @@
         </button>
 
         <!-- 👤 Profile dropdown -->
-        <div class="relative ml-3">
+        <div *ngIf="authService.isLoggedIn()" class="relative ml-3">
           <button
             id="user-menu-button"
             type="button"
@@ -140,23 +150,45 @@
             aria-labelledby="user-menu-button"
           >
             <a
-              href="#"
+              *ngIf="authService.isAdmin()"
+              [routerLink]="'/'"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
-              >Your Profile</a
             >
+              Home
+            </a>
+
+            <a
+              [routerLink]="'/cart'"
+              class="block px-4 py-2 text-sm text-gray-700"
+              role="menuitem"
+            >
+              My Carts
+            </a>
+
+            <a
+              *ngIf="authService.isAdmin()"
+              [routerLink]="'/admin'"
+              class="block px-4 py-2 text-sm text-gray-700"
+            >
+              Dashboard
+            </a>
+
             <a
               href="#"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
-              >Settings</a
             >
+              Settings
+            </a>
+
             <a
-              href="#"
+              (click)="logout()"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
-              >Sign out</a
             >
+              Sign out
+            </a>
           </div>
         </div>
       </div>
@@ -188,6 +220,5 @@
         >Featured</a
       >
     </div>
-    
   </div>
 </nav>
