--- a/fronted/src/app/app.component.html
+++ b/fronted/src/app/app.component.html
@@ -6,9 +6,11 @@
 <router-outlet></router-outlet>
 <app-footer></app-footer> -->
 
+<!-- Background Animation -->
 
-<div class="flex flex-col min-h-screen bg-gray-100">
- <app-header></app-header>
+
+<div class="flex flex-col min-h-screen bg-transparent relative z-10">
+  <app-header></app-header>
 
   <!-- Page Content -->
   <main class="flex-grow">
