--- a/fronted/src/app/app.component.html
+++ b/fronted/src/app/app.component.html
@@ -9,8 +9,8 @@
 <!-- Background Animation -->
 
 
-<div class="flex flex-col min-h-screen bg-transparent relative z-10">
-  <app-header></app-header>
+<div class="flex flex-col min-h-screen bg-transparent relative z-10 ">
+  <app-header class="sticky top-0 z-50 bg-white shadow-md"></app-header>
 
   <!-- Page Content -->
   <main class="flex-grow">
